--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -431,7 +431,8 @@ header{
             max-width: 8.5em;
             max-height: 7em;
             overflow: hidden;
-            margin-top: 1em;
+            margin-top: .5em;
+            margin-bottom: 1em;
             .img_impulso{
                 width: 100%;
                 height: 100%;
